actualiza esquemas de Pydantic para usar from_attributes y agrega archivo .env con configuraciones

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,10 @@ __pycache__/
 # Entorno virtual
 venv/
 env/
+.venv/
 
 # Base de datos local
 *.db
-
-# Archivo de configuración sensible
-.env
 
 # VS Code
 .vscode/
